--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,31 +1,22 @@
-.App {
-  text-align: center;
+* {
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.appContainer {
+  /* background-color: red; */
+  min-height: 80vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* justify-content: center; */
+  margin-top: 120px;
 }
 
-.App-link {
-  color: #61dafb;
+/* @media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +26,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
