--- a/frontend/src/components/Page.css
+++ b/frontend/src/components/Page.css
@@ -1,9 +1,4 @@
 .page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    min-width: 90vw;
-    max-height: 100vh;
     padding-top: 120px;
+    width: 60%;
 }
