--- a/frontend/src/components/PageHeader.css
+++ b/frontend/src/components/PageHeader.css
@@ -1,5 +1,5 @@
 .eventsHeader {
-    width: 100%;
+    width: 800px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
