--- a/frontend/src/pages/login/styles.css
+++ b/frontend/src/pages/login/styles.css
@@ -1,11 +1,9 @@
-.loginPage{
+.loginPage {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    min-width: 90vw;
-    max-height: 100vh;
-    padding-top: 120px;
+    gap: 20px;
+    margin-top: 120px;
 }
 .loginContainer {
     display: flex;
