--- a/frontend/src/components/Slideshow.css
+++ b/frontend/src/components/Slideshow.css
@@ -17,7 +17,7 @@
     align-content: center;
     justify-content: center;
 }
-.slide {
+.slideContainer {
     height:100%;
     display: flex;
     flex-direction: column;
