--- a/frontend/src/components/navigation.css
+++ b/frontend/src/components/navigation.css
@@ -44,8 +44,27 @@
     padding-bottom: 30px;
 }
 
+
+a:link{
+    text-decoration: none;
+}
+
+a:active{
+    color: black;
+}
+
+a:visited{
+    color: black;
+}
+
+a:hover{
+    color: white;
+}
+
+
+
 html{
     margin: 0; 
     height: 100%; 
-    overflow: hidden
+    overflow: hidden;
 }
