added global styles

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
-* {
-  margin: 0 auto;
+html{
+  margin: 0; 
+  height: 100%; 
+  overflow: hidden
 }
 
 /* @media (prefers-reduced-motion: no-preference) {
