fixed page component to account for nav bar

--- a/frontend/src/components/Page.css
+++ b/frontend/src/components/Page.css
@@ -1,4 +1,11 @@
 .page {
+    display:grid;
+    grid-template-columns: 1fr 3fr;
+    height: 100vh;
+}
+.navBar {
+}
+.content {
     padding-top: 120px;
-    width: 60%;
+    margin: 0 auto;
 }
