--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 html {
   margin: 0;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 /* @media (prefers-reduced-motion: no-preference) {
