--- a/frontend/src/components/navigation.css
+++ b/frontend/src/components/navigation.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     padding-right: 2em;
     padding-left: 2em;
-    height: 100vh;
+    height: 100%;
     flex-grow: 1;
     box-shadow: 0px 0px 5px .5px black;
 }
