--- a/frontend/src/pages/calendar/styles.css
+++ b/frontend/src/pages/calendar/styles.css
@@ -1,126 +1,132 @@
-.calendarContainer{
-    display: flex;
+.calendarContainer {
+  display: flex;
 }
 
-.calendar{
-    text-align: center;
-    margin-left: 15%;
-    margin: auto;
+.calendar {
+  text-align: center;
+  margin-left: 15%;
+  margin: auto;
 }
 
-.calendarTitle{
-    text-align: center;
+.calendarTitle {
+  text-align: center;
 }
 
-.circle{
-    height: 25px;
-    width: 25px;
-    background-color: #FCCD6C;
-    border-radius: 50%;
-    display: inline-block;
+.circle {
+  height: 25px;
+  width: 25px;
+  background-color: #fccd6c;
+  border-radius: 50%;
+  display: inline-block;
 }
 
-.css-jgls56-MuiButtonBase-root-MuiPickersDay-root.Mui-selected{
-    color: #51A46A !important;
+.css-jgls56-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
+  color: #51a46a !important;
 }
 
 .css-1u23akw-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
-    color: #51A46A !important;
+  color: #51a46a !important;
 }
 
-.css-cyfsxc-MuiPickersCalendarHeader-labelContainer{
-    font-size: 24px !important;
+.css-cyfsxc-MuiPickersCalendarHeader-labelContainer {
+  font-size: 24px !important;
 }
 .css-1u23akw-MuiButtonBase-root-MuiPickersDay-root {
-    font-size: 1em !important;
-    padding-top: 1em !important;
-    padding-left: 4em !important;
-    padding-bottom: 4em !important;
-    padding-right: 1em !important;
-    background-color: white !important;
-    border-radius: 0  !important;
-    border-style: solid !important;
-    outline: solid black !important;
-    border-color: rgb(0, 0, 0) !important;
-    margin: 0 !important;
+  font-size: 1em !important;
+  padding-top: 1em !important;
+  padding-left: 4em !important;
+  padding-bottom: 4em !important;
+  padding-right: 1em !important;
+  background-color: white !important;
+  border-radius: 0 !important;
+  border-style: solid !important;
+  outline: solid black !important;
+  border-color: rgb(0, 0, 0) !important;
+  margin: 0 !important;
 }
 
 .css-flbe84-MuiDayCalendar-weekContainer {
-    margin-top: 2px !important;
-    margin-bottom: 0 !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
+  margin-top: 2px !important;
+  margin-bottom: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
 
 .css-jgls56-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
-    border: 0px !important;
+  border: 0px !important;
 }
 .css-2jurxj-MuiDayCalendar-slideTransition {
-    padding: 1em !important;
-   
+  padding: 1em !important;
 }
 
 .css-12p2adl-MuiDayCalendar-monthContainer {
-    overflow: visible !important;
+  overflow: visible !important;
 }
 
 .css-jgls56-MuiButtonBase-root-MuiPickersDay-root {
-    padding-top: 1em !important;
-    padding-right: 1em !important;
-    padding-left: 4em !important;
-    padding-bottom: 4em !important;
-    border-radius: 0 !important;
-    font-size: 1em !important;
-    background-color: white !important;
-    margin: 0 !important;
-    outline: solid black !important;
-    border-color: rgb(0, 0, 0) !important;
+  padding-top: 1em !important;
+  padding-right: 1em !important;
+  padding-left: 4em !important;
+  padding-bottom: 4em !important;
+  border-radius: 0 !important;
+  font-size: 1em !important;
+  background-color: white !important;
+  margin: 0 !important;
+  outline: solid black !important;
+  border-color: rgb(0, 0, 0) !important;
 }
 .css-flbe84-MuiDayCalendar-weekContainer {
-    justify-content: right !important;
+  justify-content: right !important;
 }
 
 .css-1tkx1wf-MuiSvgIcon-root-MuiPickersCalendarHeader-switchViewIcon {
-    visibility: hidden;
+  visibility: hidden;
 }
 .css-168nijn-MuiPickersDay-root {
-    margin-right: 0px !important;
-    margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-left: 0px !important;
 }
 
 .css-cwhad8-MuiDateCalendar-root {
-    overflow: visible !important;
-    width: 600px !important;
-    max-height: 600px !important;
-
+  overflow: visible !important;
+  width: 600px !important;
+  max-height: 600px !important;
 }
 
 .css-15v8kdh-MuiPickersFadeTransitionGroup-root-MuiDateCalendar-viewTransitionContainer {
-    padding-right: 20px !important;
+  padding-right: 20px !important;
 }
 
-.css-1cafy48-MuiPickersSlideTransition-root-MuiDayCalendar-slideTransition>* {
-    position: relative !important;
-    padding-bottom: 3em !important;
+.css-1cafy48-MuiPickersSlideTransition-root-MuiDayCalendar-slideTransition > * {
+  position: relative !important;
+  padding-bottom: 3em !important;
 }
 
 .css-rhmlg1-MuiTypography-root-MuiDayCalendar-weekDayLabel {
-    margin: 0 23px !important;
-    font-size: 14px;
+  margin: 0 23px !important;
+  font-size: 14px;
 }
 
 .css-168nijn-MuiPickersDay-root {
-    width: 0 !important;
-    height: 0 !important;
+  width: 0 !important;
+  height: 0 !important;
 }
 
-.css-1cafy48-MuiPickersSlideTransition-root-MuiDayCalendar-slideTransition{
-    overflow-x: visible !important;
+.css-1cafy48-MuiPickersSlideTransition-root-MuiDayCalendar-slideTransition {
+  overflow-x: visible !important;
 }
 
 .css-cwhad8-MuiDateCalendar-root {
-    border: 3px solid #D9D9D9;
-    border-radius: 10px !important;
-    min-height: 0 !important;
-    box-shadow: 0px 1px 10px 2px #c5c5c5 !important;
+  border: 3px solid #d9d9d9;
+  border-radius: 10px !important;
+  min-height: 0 !important;
+  box-shadow: 0px 1px 10px 2px #c5c5c5 !important;
 }
+
+.css-144dnr3-MuiBadge-badge {
+  background-color: #fa2e59;
+  border-radius: 50%;
+  color: white !important;
+  position: absolute;
+}
+
