--- a/frontend/src/pages/create/styles.css
+++ b/frontend/src/pages/create/styles.css
@@ -5,31 +5,17 @@
     width: 800px;
     position: relative;
 }
-.formPage {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
 .labelInput > * {
     margin: 8px;
 }
-.radioButtonsContainer {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
+.formPageButton {
+    min-height: 320px;
+    width: 50%;
 }
-#formPage3 {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-} 
 .pageButtonContainer {
     position: absolute;
     bottom: 16px;
-    right: 16px;
+    left: 16px;
     display: flex;
     flex-direction: row;
     gap: 8px;
