page header changes with page state

--- a/frontend/src/pages/create/styles.css
+++ b/frontend/src/pages/create/styles.css
@@ -1,5 +1,5 @@
 .formContainer {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 8px 16px;
     min-height: 600px;
     width: 800px;
