--- a/frontend/src/pages/create/styles.css
+++ b/frontend/src/pages/create/styles.css
@@ -9,6 +9,16 @@
     width: 180px;
     border: 1px solid black;
 }
+.dev-x {
+    position: absolute !important;
+    top: 0;
+    right: 0;
+    min-height: 1px;
+    min-width: 1px;
+}
+.dev-x-label {
+    color: gray;
+}
 .dev-pic {
     border-radius: 5px 5px 0 0 ;
     background-image: url(https://i.pinimg.com/564x/0d/c3/91/0dc391d9ec7ad7ed9d14acd2b907d90c.jpg);
