--- a/frontend/src/components/Page.css
+++ b/frontend/src/components/Page.css
@@ -1,11 +1,14 @@
 .page {
-    display:grid;
-    grid-template-columns: 1fr 3fr;
+    display:flex;
+    flex-direction: row;
     height: 100vh;
 }
-.navBar {
+.heading {
+    margin-bottom: 32px;
+    padding-bottom: 16px;
+    /* border-top: 1px solid rgb(107, 107, 107); */
 }
-.content {
-    padding-top: 80px;
+.contentContainer {
+    padding: 80px 80px 0 80px;
     margin: 0 auto;
 }
