--- a/frontend/src/components/Slideshow.css
+++ b/frontend/src/components/Slideshow.css
@@ -5,8 +5,8 @@
     border: 1px solid black;
     box-shadow: 4px 0 12px rgba(0, 0, 0, 0.25);
     margin-bottom: 80px;
-    height: 420px;
-    width: 900px;
+    height: 600px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-self: center;
