--- a/frontend/src/pages/events/styles.css
+++ b/frontend/src/pages/events/styles.css
@@ -5,4 +5,6 @@
     min-height: 130px;
     padding: 24px;
     border-radius: 10px;
+    box-shadow: rgb(0, 0, 0, 0.25); 
+    background-color: #d6dad6 !important;
 }
