--- a/frontend/src/components/navigation.css
+++ b/frontend/src/components/navigation.css
@@ -47,16 +47,20 @@
 
 a:link{
     color: black;
+    text-decoration: none;
 }
 
 a:active{
     color: black;
+    text-decoration: none;
 }
 
 a:visited{
     color: black;
+    text-decoration: none;
 }
 
 a:hover{
     color: white;
+    text-decoration: none;
 }
