removed permission actions and added roles per user or admin

--- a/frontend/src/pages/configuration/styles.css
+++ b/frontend/src/pages/configuration/styles.css
@@ -80,6 +80,11 @@
     margin-bottom: 20px;
 }
 
+
+.acccountRole{
+    display: inline;
+}
+
 .css-rtrcn9-MuiTablePagination-root .MuiTablePagination-selectLabel{
     display: none !important;
 }
