--- a/frontend/src/components/Page.css
+++ b/frontend/src/components/Page.css
@@ -2,11 +2,7 @@
     display:flex;
     flex-direction: row;
     height: 100vh;
-}
-.heading {
-    margin-bottom: 32px;
-    padding-bottom: 16px;
-    /* border-top: 1px solid rgb(107, 107, 107); */
+    width: 100%;
 }
 .contentContainer {
     padding: 80px 80px 0 80px;
