--- a/frontend/src/components/PageHeader.css
+++ b/frontend/src/components/PageHeader.css
@@ -1,6 +1,5 @@
-.eventsHeader {
-    width: 800px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+.heading {
+    margin-bottom: 32px;
+    padding-bottom: 16px;
+    /* border-top: 1px solid rgb(107, 107, 107); */
 }
