--- a/frontend/src/components/Page.css
+++ b/frontend/src/components/Page.css
@@ -2,9 +2,10 @@
     display:flex;
     flex-direction: row;
     height: 100vh;
-    width: 100%;
+    padding-bottom: 40px;
 }
 .contentContainer {
     padding: 80px 80px 0 80px;
     margin: 0 auto;
+    width: 100%;
 }
