--- a/frontend/src/pages/calendar/styles.css
+++ b/frontend/src/pages/calendar/styles.css
@@ -196,9 +196,10 @@
    
 .css-cwhad8-MuiDateCalendar-root {
     border: 3px solid #d9d9d9;
+    background-color: #F7F7F7;
     border-radius: 10px !important;
     min-height: 0 !important;
-    box-shadow: 0px 1px 10px 2px #c5c5c5 !important;
+    box-shadow: 0px 0px 6px 0px #c5c5c5 !important;
 }
   
 .css-cwhad8-MuiDateCalendar-root {
