--- a/frontend/src/pages/calendar/styles.css
+++ b/frontend/src/pages/calendar/styles.css
@@ -199,7 +199,7 @@
     background-color: #F7F7F7;
     border-radius: 10px !important;
     min-height: 0 !important;
-    box-shadow: 0px 0px 6px 0px #c5c5c5 !important;
+    /* box-shadow: 0px 0px 6px 0px #c5c5c5 !important; */
 }
   
 .css-cwhad8-MuiDateCalendar-root {
