--- a/frontend/src/components/Slideshow.css
+++ b/frontend/src/components/Slideshow.css
@@ -6,7 +6,7 @@
     box-shadow: 4px 0 12px rgba(0, 0, 0, 0.25);
     margin-bottom: 80px;
     height: 600px;
-    width: 100%;
+    /* width: 100%; */
     display: flex;
     flex-direction: column;
     align-self: center;
