--- a/frontend/src/pages/events/styles.css
+++ b/frontend/src/pages/events/styles.css
@@ -8,3 +8,9 @@
     box-shadow: rgb(0, 0, 0, 0.25); 
     background-color: #d6dad6 !important;
 }
+.slideshowContainer {
+    border: 1px solid black;
+    border-radius: 10px 10px 0 0;
+    box-shadow: 4px 0 12px rgba(0, 0, 0, 0.25);
+    margin-bottom: 80px;
+}
