--- a/frontend/src/components/Page.css
+++ b/frontend/src/components/Page.css
@@ -1,9 +1,13 @@
 .page {
     height: 100vh;
     display: flex;
+    flex-direction: row;
 }
 .contentContainer {
-    padding: 80px 80px 0 80px;
-    margin-left: 25%;
+    padding: 6em 3em 0 3em;
     width: 100%;
+}
+.spacer {
+    padding: 2.3em 2em 4em 2em;
+    min-width: 14em;
 }
