--- a/frontend/src/components/Page.css
+++ b/frontend/src/components/Page.css
@@ -1,7 +1,8 @@
 .page {
-    height: 100vh;
+    min-height: 90vh;
     display: flex;
     flex-direction: row;
+    padding-bottom: 10vh;
 }
 .contentContainer {
     padding: 6em 3em 0 3em;
