--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,25 @@ html {
   overflow-y: scroll;
   overflow-x: hidden;
 }
+a:link{
+  color: black;
+  text-decoration: none;
+}
+
+a:active{
+  color: black;
+  text-decoration: none;
+}
+
+a:visited{
+  color: black;
+  text-decoration: none;
+}
+
+a:hover{
+  color: white;
+  text-decoration: none;
+}
 
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
