removed the number 2 badge from calendar

--- a/frontend/src/pages/calendar/styles.css
+++ b/frontend/src/pages/calendar/styles.css
@@ -190,3 +190,7 @@
 .calendarContainer .css-cwhad8-MuiDateCalendar-root {
   padding-bottom: 6em !important;
 }
+
+.css-144dnr3-MuiBadge-badge{
+  color: white !important
+}
