--- a/frontend/src/pages/calendar/styles.css
+++ b/frontend/src/pages/calendar/styles.css
@@ -204,3 +204,18 @@
   padding-top: 20px !important;
   padding-bottom: 20px !important;
 }
+
+
+.Events{
+    margin-top: 50px;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding: 1em;
+    border: 3px solid #d9d9d9;
+    background-color: #f7f7f7;
+    border-radius: 10px !important;
+}
+.Event{
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
