--- a/frontend/src/pages/calendar/styles.css
+++ b/frontend/src/pages/calendar/styles.css
@@ -191,16 +191,30 @@
   padding-bottom: 6em !important;
 }
 
-.css-144dnr3-MuiBadge-badge{
-  color: white !important
+.css-144dnr3-MuiBadge-badge {
+  color: white !important;
 }
 
-.calendarContainer .css-15v8kdh-MuiPickersFadeTransitionGroup-root-MuiDateCalendar-viewTransitionContainer {
+.calendarContainer
+  .css-15v8kdh-MuiPickersFadeTransitionGroup-root-MuiDateCalendar-viewTransitionContainer {
   padding-bottom: 4em !important;
 }
-
 
 .css-i5q14k-MuiDayCalendar-header {
   padding-top: 20px !important;
   padding-bottom: 20px !important;
+}
+
+.Events {
+  margin-top: 50px;
+  margin-left: 20%;
+  margin-right: 20%;
+  padding: 1em;
+  border: 3px solid #d9d9d9;
+  background-color: #f7f7f7;
+  border-radius: 10px !important;
+}
+.Event {
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
