--- a/frontend/src/pages/events/styles.css
+++ b/frontend/src/pages/events/styles.css
@@ -10,14 +10,21 @@
 }
 .slideshowContainer {
     border: 1px solid black;
-    border-radius: 10px 10px 0 0;
+    border-radius: 5px 5px 0 0;
     box-shadow: 4px 0 12px rgba(0, 0, 0, 0.25);
 }
 
 .MuiCardContent-root {
-    font-size: 300% !important;
+    font-size: 2.8vw !important;
 }
 
 .MuiCardHeader-title {
-    font-size: 300% !important;
+    font-size: 3vw !important;
+    line-height: 3vw !important;
+}
+.MuiCardHeader-subheader {
+    font-size: 1.5vw !important;
+} 
+.css-1m9128y {
+    margin-top: 0 !important;
 }
