--- a/frontend/src/assets/colors.css
+++ b/frontend/src/assets/colors.css
@@ -2,6 +2,7 @@
     --background: #F7F7F7;
     --primary: #51A46A;
     --secondary: #2D443D;
+    --red: #5b0b0b;
     --accent: #FCCD6C;
     --shadow: #D9D9D9;
     --text: #FFFFFF;
